--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
-<!-- <header></header> -->
 <app-navbar></app-navbar>
-<div class="page-height">
+
+<app-sidebar></app-sidebar>
+
+<main>
   <router-outlet></router-outlet>
-</div>
+</main>
 <!-- <footer></footer> -->
