--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<header class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top fs-6">
+<header class="navbar navbar-expand-lg navbar-dark sticky-top fs-6">
   <div
     class="container-fluid d-flex justify-content-between align-items-center"
   >
