--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,25 @@
 /* You can add global styles to this file, and also import other style files */
+/* const globali dei componenti: */
+:root {
+  --navbar-height: 58px;
+  --sidebar-width: 4.5rem;
+  --avatar-size: 2rem;
+  /* Palette colori globale */
+  --color-primary: #8d00f9;
+  --color-dark: #2b0a3d;
+  --color-accent: #be9fd6;
+  --color-text-light: #f5f5f5; /* preferisco questo bianco */
+  --color-bg: #fbfbfb;
+}
+
+html,
+body {
+  min-height: 100vh;
+  padding: 0;
+  margin: 0;
+  overflow: hidden; /*TODO: provvisorio o fisso? per ora messo per non far scrollare la pagina e nascondere le parti "sporche". in caso in futuro metterò solo per la X o Y, da capire */
+}
+
+* {
+  box-sizing: border-box;
+}
