--- a/src/app/components/item-card/item-card.component.css
+++ b/src/app/components/item-card/item-card.component.css
@@ -2,6 +2,8 @@
   background-color: var(--color-bg);
   color: var(--color-dark);
   border: 3px solid var(--color-accent);
+  width: 18.75rem;
+  height: 10rem;
 }
 
 .card:hover {
