--- a/src/app/pages/home-page/home.page.html
+++ b/src/app/pages/home-page/home.page.html
@@ -1,4 +1,4 @@
-<div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
+<div class="d-flex flex-wrap justify-content-center gap-4">
   @for (item of items(); track item.title) {
   <div class="col">
     <app-item-card
