--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -17,8 +17,10 @@
 </div>
 
 <!-- Avatar -->
-<div class="border-top py-3 d-flex justify-content-center">
-  <a href="#" class="text-white text-decoration-none">
-    <img src="/assets/propic.jpg" alt="user" class="rounded-circle avatar" />
-  </a>
-</div>
+<a
+  routerLink="/register"
+  routerLinkActive="active"
+  class="nav-link border-top py-3 d-flex justify-content-center align-items-center"
+>
+  <img src="/assets/propic.jpg" alt="user" class="rounded-circle avatar" />
+</a>
