feat(products): add products page with routing and basic structure feat(register): created  register service with user management methods fix(navbar): change 'Register' link to 'Login' fix(sidebar): add tooltip to sidebar avatar and update imports chore: add kendo-angular-tooltip dependency

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -19,7 +19,7 @@
         class="nav-link text-light fw-semibold"
         routerLink="/register"
         routerLinkActive="active"
-        >Register</a
+        >Login</a
       >
     </nav>
   </div>
