feat(login): add login page with routing

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -17,9 +17,15 @@
       >
       <a
         class="nav-link text-light fw-semibold"
-        routerLink="/register"
+        routerLink="/login"
         routerLinkActive="active"
         >Login</a
+      >
+      <a
+        class="nav-link text-light fw-semibold"
+        routerLink="/register"
+        routerLinkActive="active"
+        >Register</a
       >
     </nav>
   </div>
