fix(sidebar): update profile link to navigate to login page

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -18,7 +18,7 @@
 <!-- Avatar -->
 <div kendoTooltip title="Profilo" position="right">
   <a
-    routerLink="/register"
+    routerLink="/login"
     routerLinkActive="active"
     class="nav-link border-top py-3 d-flex justify-content-center align-items-center"
   >
