feat(register): add Kendo UI Notification component and improve form

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,6 +1,8 @@
-<div class="login-wrapper">
+<div
+  class="login-wrapper d-flex justify-content-center align-items-center flex-column"
+>
   <form
-    class="k-form k-form-md login-form border series-e-subtler p-4 rounded"
+    class="k-form k-form-md login-form border series-e-subtler p-4 rounded w-50"
     [formGroup]="form"
   >
     <fieldset class="k-form-fieldset">
