feat(debug): add DebugPage page and routing

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -23,9 +23,9 @@
       >
       <a
         class="nav-link text-light fw-semibold"
-        routerLink="/register"
+        routerLink="/debug"
         routerLinkActive="active"
-        >Register</a
+        >DEBUG</a
       >
     </nav>
   </div>
