feat(auth): implement AuthService with user registration and login functionality feat(register): add password field to registration form feat(home): integrate signal for loading state in HomePage

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -19,15 +19,15 @@
         ></kendo-avatar>
       </div>
 
-      <!-- Username -->
+      <!-- Email -->
       <kendo-formfield>
-        <kendo-label text="Username"></kendo-label>
+        <kendo-label text="Email"></kendo-label>
         <kendo-textbox
-          formControlName="username"
+          formControlName="email"
           [clearButton]="true"
           required
         ></kendo-textbox>
-        <kendo-formhint>Inserisci il tuo username</kendo-formhint>
+        <kendo-formhint>Inserisci il tuo Email</kendo-formhint>
         <kendo-formerror>Campo obbligatorio</kendo-formerror>
       </kendo-formfield>
 
