feat(debug): implement user list display

--- a/src/app/pages/debug/debug.page.html
+++ b/src/app/pages/debug/debug.page.html
@@ -1,1 +1,25 @@
-<p>debug works!</p>
+<div class="container mt-4">
+  <h2>Utenti Registrati (Debug)</h2>
+
+  <div *ngIf="users().length > 0; else noUsers">
+    <ul class="list-unstyled">
+      @for (user of users(); track user.email) {
+      <li class="mb-3">
+        <strong>{{ user.firstName }} {{ user.lastName }}</strong><br />
+        Email: {{ user.email }}<br />
+        Username: {{ user.username }}<br />
+        Data di Nascita: {{ user.birthDate | date: 'dd/MM/yyyy' }}<br />
+        Codice Fiscale: {{ user.fiscalCode }}
+      </li>
+      }
+    </ul>
+
+    <button kendoButton themeColor="error" (click)="clearUsers()">
+      Svuota Lista Utenti
+    </button>
+  </div>
+
+  <ng-template #noUsers>
+    <p>Nessun utente registrato.</p>
+  </ng-template>
+</div>
