--- a/src/app/pages/home-page/home.page.html
+++ b/src/app/pages/home-page/home.page.html
@@ -1,8 +1,117 @@
-<div class="carousel-wrapper">
-  <h2 class="mb-3">Recent Releases</h2>
+<!-- TODO: cambiare qualche foto per farlo divewrso -->
 
+<div class="container-fluid my-5">
+  <div class="row">
+    <!-- carosello -->
+    <div class="col-lg-8">
+      <div
+        id="carouselExampleAutoplaying"
+        class="carousel slide"
+        data-bs-ride="carousel"
+      >
+        <div class="carousel-inner">
+          @for (item of items(); let i = $index; track item.title) {
+          <div class="carousel-item" [class.active]="i === 0">
+            <img
+              [src]="item.imageUrl"
+              class="d-block w-100"
+              [alt]="item.title"
+              style="height: 400px; object-fit: cover"
+            />
+          </div>
+          }
+        </div>
+
+        <!-- Controls -->
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExampleAutoplaying"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExampleAutoplaying"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </div>
+
+    <!-- Lista a destra -->
+    <div class="col-lg-4 d-flex flex-column gap-4 pt-1">
+      <!-- stop prendendo i primi 4 con slice, salto index 0 perché son pigro ed è -->
+      @for (item of items().slice(1, 5); track item.title) {
+      <div class="d-flex bg-dark text-white rounded overflow-hidden shadow-sm">
+        <img [src]="item.imageUrl" class="img-fluid side-image" />
+        <div class="px-2 pt-2">
+          <h3 class="mb-1">{{ item.title }}</h3>
+          <h6>{{ item.description }}</h6>
+        </div>
+      </div>
+      }
+    </div>
+  </div>
+</div>
+
+<div class="carousel-wrapper">
   <app-carousel-scroll
     [items]="items()"
     [genre]="categories.ELECTRO"
+  ></app-carousel-scroll>
+</div>
+
+<div class="carousel-wrapper">
+  <app-carousel-scroll
+    [items]="items()"
+    [genre]="categories.SUIT"
+  ></app-carousel-scroll>
+</div>
+
+<div class="carousel-wrapper">
+  <app-carousel-scroll
+    [items]="items()"
+    [genre]="categories.TOYS"
+  ></app-carousel-scroll>
+</div>
+
+<div class="carousel-wrapper">
+  <app-carousel-scroll
+    [items]="items()"
+    [genre]="categories.GRAPHIC3D"
+  ></app-carousel-scroll>
+</div>
+
+<div class="carousel-wrapper">
+  <app-carousel-scroll
+    [items]="items()"
+    [genre]="categories.UI"
+  ></app-carousel-scroll>
+</div>
+
+<div class="carousel-wrapper">
+  <app-carousel-scroll
+    [items]="items()"
+    [genre]="categories.DESIGN"
+  ></app-carousel-scroll>
+</div>
+
+<div class="carousel-wrapper">
+  <app-carousel-scroll
+    [items]="items()"
+    [genre]="categories.GRAPHIC"
+  ></app-carousel-scroll>
+</div>
+
+<div class="carousel-wrapper">
+  <app-carousel-scroll
+    [items]="items()"
+    [genre]="categories.OTHERS"
   ></app-carousel-scroll>
 </div>
