--- a/src/app/pages/home-page/home.page.css
+++ b/src/app/pages/home-page/home.page.css
@@ -1,3 +1,7 @@
+:host {
+  background-color: var(--color-bg-dark);
+}
+
 .carousel-wrapper {
   padding-bottom: 1rem;
 }
@@ -5,4 +9,9 @@
 .side-image {
   width: 120px;
   height: 80px;
+}
+
+.carousel-image {
+  height: 25.25rem;
+  object-fit: cover;
 }
