--- a/src/app/pages/home-page/home.page.html
+++ b/src/app/pages/home-page/home.page.html
@@ -1,6 +1,6 @@
 <!-- TODO: cambiare qualche foto per farlo divewrso -->
 
-<div class="container-fluid my-5">
+<div class="container-fluid my-5 bg-home">
   <div class="row">
     <!-- carosello -->
     <div class="col-lg-8">
@@ -10,20 +10,24 @@
         data-bs-ride="carousel"
       >
         <div class="carousel-inner">
-          @for (item of items(); let i = $index; track item.title) {
+          @for (item of carouselItems(); let i = $index; track item.title) {
           <div class="carousel-item" [class.active]="i === 0">
             <img
               [src]="item.imageUrl"
-              class="d-block w-100"
+              class="d-block w-100 carousel-image"
               [alt]="item.title"
-              style="height: 400px; object-fit: cover"
             />
+            <div class="carousel-caption d-none d-md-block">
+              <h5 class="fw-bold">{{item.title}}</h5>
+              <p class="fw-bold">{{item.description}}</p>
+            </div>
           </div>
           }
         </div>
 
         <!-- Controls -->
-        <button
+        <!-- disabilitati per ora perché sembra figo senza -->
+        <!-- <button
           class="carousel-control-prev"
           type="button"
           data-bs-target="#carouselExampleAutoplaying"
@@ -40,14 +44,13 @@
         >
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
-        </button>
+        </button> -->
       </div>
     </div>
 
     <!-- Lista a destra -->
-    <div class="col-lg-4 d-flex flex-column gap-4 pt-1">
-      <!-- stop prendendo i primi 4 con slice, salto index 0 perché son pigro ed è -->
-      @for (item of items().slice(1, 5); track item.title) {
+    <div class="col-lg-4 d-flex flex-column gap-4">
+      @for (item of sideItems(); track item.title) {
       <div class="d-flex bg-dark text-white rounded overflow-hidden shadow-sm">
         <img [src]="item.imageUrl" class="img-fluid side-image" />
         <div class="px-2 pt-2">
