--- a/src/styles.css
+++ b/src/styles.css
@@ -8,8 +8,9 @@
   --color-primary: #8d00f9;
   --color-dark: #2b0a3d;
   --color-accent: #be9fd6;
-  --color-text-light: #f5f5f5; /* preferisco questo bianco */
-  --color-bg: #fbfbfb;
+  --color-bg: #f5f5f5; /* preferisco questo bianco */
+  /* --color-bg: #fbfbfb; */
+  --color-bg-dark: #202124;
 }
 
 html,
@@ -18,8 +19,29 @@ body {
   padding: 0;
   margin: 0;
   overflow: hidden; /*TODO: provvisorio o fisso? per ora messo per non far scrollare la pagina e nascondere le parti "sporche". in caso in futuro metterò solo per la X o Y, da capire */
+  scrollbar-color: #666 #201c29; /* copiata ispezionando la scrollbar di https://css-tricks.com/custom-scrollbars-in-webkit/ */
 }
 
 * {
   box-sizing: border-box;
 }
+::-webkit-scrollbar {
+  width: 1rem;
+  height: 1rem;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #434343;
+  border-radius: 16px;
+  box-shadow: inset 2px 2px 2px hsla(0, 0%, 100%, 0.25),
+    inset -2px -2px 2px rgba(0, 0, 0, 0.25);
+}
+
+/* la scroll bar così è invisibile */
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+/* CSS trick l'ha così, ma la preferisco transparent */
+/* ::-webkit-scrollbar-track {
+  background: linear-gradient(90deg, #434343, #434343 1px, #111 0, #111);
+} */
