--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -27,5 +27,5 @@ main {
   height: calc(100vh - var(--navbar-height));
   overflow-y: auto;
   padding: 1rem;
-  background-color: var(--color-bg-dark);
+  /* background-color: var(--color-bg-dark); */
 }
