--- a/src/app/components/carousel-scroll/carousel-scroll/carousel-scroll.component.html
+++ b/src/app/components/carousel-scroll/carousel-scroll/carousel-scroll.component.html
@@ -31,7 +31,7 @@
       #scrollContainer
     >
       @for (item of items() | filter: genre(); track item.title) {
-      <div class="carousel-slide flex-shrink-0 me-3">
+      <div class="carousel-slide flex-shrink-0 me-3 pb-3">
         <app-item-card
           [title]="item.title"
           [description]="item.description"
