--- a/src/app/pages/home-page/home.page.html
+++ b/src/app/pages/home-page/home.page.html
@@ -51,7 +51,9 @@
     <!-- Lista a destra -->
     <div class="col-lg-4 d-flex flex-column gap-4">
       @for (item of sideItems(); track item.title) {
-      <div class="d-flex bg-dark text-white rounded overflow-hidden shadow-sm">
+      <div
+        class="d-flex side-image-container text-white rounded overflow-hidden shadow-sm"
+      >
         <img [src]="item.imageUrl" class="img-fluid side-image" />
         <div class="px-2 pt-2">
           <h3 class="mb-1">{{ item.title }}</h3>
