--- a/src/styles.css
+++ b/src/styles.css
@@ -11,6 +11,7 @@
   --color-bg: #f5f5f5; /* preferisco questo bianco */
   /* --color-bg: #fbfbfb; */
   --color-bg-dark: #202124;
+  --color-primary-dark: #2c2e32;
 }
 
 html,
@@ -25,6 +26,16 @@ body {
 * {
   box-sizing: border-box;
 }
+
+/* TODO: per il cambio da dark a light mode, solo per la home */
+body {
+  background-color: var(--color-bg);
+}
+
+body.dark-home {
+  background-color: var(--color-bg-dark);
+}
+
 ::-webkit-scrollbar {
   width: 1rem;
   height: 1rem;
@@ -33,8 +44,6 @@ body {
 ::-webkit-scrollbar-thumb {
   background: #434343;
   border-radius: 16px;
-  box-shadow: inset 2px 2px 2px hsla(0, 0%, 100%, 0.25),
-    inset -2px -2px 2px rgba(0, 0, 0, 0.25);
 }
 
 /* la scroll bar così è invisibile */
