feat(products): update welcome message and add TODO for login indication

--- a/src/app/pages/products/products.page.html
+++ b/src/app/pages/products/products.page.html
@@ -1,1 +1,4 @@
-<p>products works!</p>
+<p>
+  Bentornato! TODO: mettere un qualcosa per far vedere che si è loggati...
+  riusare debug page? forse
+</p>
