refactor(routes): remove unused import for ProductsPage refactor(item-card): fix html

--- a/src/app/components/item-card/item-card.component.html
+++ b/src/app/components/item-card/item-card.component.html
@@ -6,7 +6,9 @@
     <p class="card-text">{{ description() }}</p>
   </div>
 
-  <div class="card-footer d-flex justify-content-between align-items-center">
+  <div
+    class="card-footer d-flex justify-content-between align-items-center px-0"
+  >
     <span class="price-badge">{{ price() }}&nbsp;€</span>
     <button class="icon-button" aria-label="Aggiungi al carrello">
       <i class="bi bi-bag fs-5"></i>
