--- a/src/app/components/item-card/item-card.component.html
+++ b/src/app/components/item-card/item-card.component.html
@@ -1,7 +1,7 @@
 <div class="card h-100 shadow-sm">
   <img [src]="imageUrl()" [alt]="title()" class="card-img" />
 
-  <div class="card-body">
+  <div class="card-body px-0">
     <h5 class="card-title">{{ title() }}</h5>
     <p class="card-text">{{ description() }}</p>
   </div>
