--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
-
-<app-sidebar></app-sidebar>
+<!-- sparisce da cell: -->
+<app-sidebar class="d-none d-md-block"></app-sidebar>
 
 <main>
   <router-outlet></router-outlet>
