--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,8 +1,8 @@
 <div
-  class="login-wrapper d-flex justify-content-center align-items-center flex-column"
+  class="login-wrapper p-1 d-flex justify-content-center align-items-center flex-column h-100"
 >
   <form
-    class="k-form k-form-md login-form border series-e-subtler p-4 rounded w-50"
+    class="k-form k-form-md login-form border series-e-subtler p-4 rounded w-75 w-sm-75 w-md-50 w-lg-40 w-xl-30"
     [formGroup]="form"
   >
     <fieldset class="k-form-fieldset">
@@ -12,9 +12,7 @@
       <div class="text-center mb-3">
         <kendo-avatar
           initials="LD"
-          class="series-e-subtle"
-          width="80px"
-          height="80px"
+          class="series-e-subtle avatar-custom"
           shape="circle"
         ></kendo-avatar>
       </div>
