--- a/src/app/pages/register-page/register.page.html
+++ b/src/app/pages/register-page/register.page.html
@@ -1,8 +1,8 @@
 <div
-  class="register-wrapper d-flex justify-content-center align-items-center flex-column"
+  class="register-wrapper d-flex justify-content-center align-items-center flex-column h-100"
 >
   <form
-    class="k-form k-form-md register-form border p-4 rounded w-50"
+    class="k-form k-form-md login-form border series-e-subtler p-4 rounded w-75 w-sm-75 w-md-50 w-lg-40 w-xl-30"
     [formGroup]="form"
   >
     <fieldset class="k-form-fieldset">
