--- a/src/app/pages/home-page/home.page.html
+++ b/src/app/pages/home-page/home.page.html
@@ -49,7 +49,7 @@
     </div>
 
     <!-- Lista a destra -->
-    <div class="col-lg-4 d-flex flex-column gap-4">
+    <div class="col-lg-4 d-flex flex-column gap-4 pt-4 pt-lg-0">
       @for (item of sideItems(); track item.title) {
       <div
         class="d-flex side-image-container text-white rounded overflow-hidden shadow-sm"
