--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,27 +1,31 @@
-<div class="flex-grow-1" kendoTooltip position="right">
-  <ul class="nav nav-pills flex-column mb-auto text-center">
-    @for (section of sections; track section.route) {
-    <li [class.d-none]="section.title === 'Products' && !isLoggedIn">
-      <a
-        routerLink="{{ section.route }}"
-        routerLinkActive="active"
-        class="nav-link py-3 border-bottom rounded-0 text-white"
-        title="{{ section.title }}"
-      >
-        <i class="bi {{ section.icon }} fs-5"></i>
-      </a>
-    </li>
-    }
-  </ul>
-</div>
+<!-- ho dovuto wrapparlo per colpa della classe messa in app component.html -->
+<div class="d-flex flex-column justify-content-between h-100">
+  <!-- Altra navigazione -->
+  <div class="flex-grow-1" kendoTooltip position="right">
+    <ul class="nav nav-pills flex-column mb-auto text-center">
+      @for (section of sections; track section.route) {
+      <li [class.d-none]="section.title === 'Products' && !isLoggedIn">
+        <a
+          routerLink="{{ section.route }}"
+          routerLinkActive="active"
+          class="nav-link py-3 border-bottom rounded-0 text-white"
+          title="{{ section.title }}"
+        >
+          <i class="bi {{ section.icon }} fs-5"></i>
+        </a>
+      </li>
+      }
+    </ul>
+  </div>
 
-<!-- Avatar -->
-<div kendoTooltip title="Profilo" position="right">
-  <a
-    routerLink="/login"
-    routerLinkActive="active"
-    class="nav-link border-top py-3 d-flex justify-content-center align-items-center"
-  >
-    <img src="/assets/propic.jpg" alt="user" class="rounded-circle avatar" />
-  </a>
+  <!-- Avatar -->
+  <div kendoTooltip title="Profilo" position="right">
+    <a
+      routerLink="/login"
+      routerLinkActive="active"
+      class="nav-link border-top py-3 d-flex justify-content-center align-items-center"
+    >
+      <img src="/assets/propic.jpg" alt="user" class="rounded-circle avatar" />
+    </a>
+  </div>
 </div>
